# Compass

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  registry.json  script.js  style.css
.agent/: instructions.md
.agent/skills/commit-helper/: SKILL.md
.agent/skills/compass-manager/: SKILL.md
.agent/skills/compass-manager/scripts/: run_compass.py
.agent/skills/debug-helper/: SKILL.md
.agent/skills/license-header/: SKILL.md
.agent/skills/markdown_test_gen/: SKILL.md
.agent/skills/markdown_test_gen/scripts/: gen_markdown.py
.agent/skills/project_checker/: SKILL.md
.agent/skills/project_checker/scripts/: check.ps1
.agent/skills/safety_auditor/: SKILL.md
.agent/skills/safety_auditor/scripts/: audit_cmd.py
.agent/skills/test-assistant/: SKILL.md
.agent/skills/test-assistant/scripts/: test_runner.py
.agent/skills/tui_prototyper/: SKILL.md
.agent/skills/tui_prototyper/scripts/: get_snippets.py
.github/ISSUE_TEMPLATE/: publish_runbook.yml
.github/scripts/: process-submission.js
.github/workflows/: approve-submission.yml  ci.yml  publish_registry.yml  publish_vscode.yml  release.yml
doc/: capabilities.md  tuto_advanced.md  tuto_beginner.md
examples/: context_test.md  dependency_test.md  hooks_demo.md  onboarding_test.md  placeholder_test.md  polyglot_test.md  safety_test.md  smart_guide_test.md
src/: main.rs  models.rs  parser.rs
src/core/: config.rs  docker.rs  executor.rs  mod.rs  models.rs  parser.rs
src/core/analysis/: recovery.rs
src/core/collab/: client.rs  events.rs  mod.rs  security.rs  server.rs  session.rs
src/core/ecosystem/: discovery.rs  hooks.rs  hub.rs  mod.rs  rpc.rs
src/core/executor/: checker.rs  mod.rs
src/core/executor/conditions/: evaluator.rs  mod.rs
src/core/executor/engine/: builder.rs  builtin.rs  context.rs  core.rs  manager.rs  mod.rs  session.rs
src/core/executor/languages/: definition.rs  mod.rs
src/core/executor/languages/strategies/: csharp.rs  go.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  shell.rs  typescript.rs
src/core/executor/security/: mod.rs  safety.rs  validator.rs
src/core/export/: mod.rs  models.rs
src/core/export/formats/: json.rs  markdown.rs  mod.rs
src/core/fetcher/: mod.rs
src/core/fetcher/rewriters/: github.rs  gitlab.rs  mod.rs
src/core/infrastructure/: config.rs  docker.rs
src/ui/: app.rs  mod.rs  utils.rs  view.rs
src/ui/events/: actions.rs  execution.rs  handlers.rs  input.rs  mod.rs
src/ui/state/: mod.rs  modal.rs
src/ui/widgets/: details.rs  mod.rs  popups.rs  step_list.rs
src/ui/widgets/popups/: dependency.rs  help.rs  input.rs  mod.rs  notification.rs  recovery.rs  safety.rs
templates/: report.md
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: client.ts  extension.ts  stepsProvider.ts
