[package]
name = "compass"
version = "1.0.0"
edition = "2024"
authors = ["eraflo"]
description = "Interactive README runner and onboarding guide"
publish = false

[dependencies]
# Ultra-fast Markdown parser
pulldown-cmark = "0.10"
# Terminal interface (TUI)
ratatui = "0.26"
crossterm = { version = "0.27", features = ["events"] }
# CLI arguments management
clap = { version = "4.4", features = ["derive"] }
# Error management
anyhow = "1.0"
# Command execution with PTY (later)
portable-pty = "0.8"
# Syntax highlighting for code
syntect = "5.1"
