[package]
name = "compass"
version = "1.4.0"
edition = "2024"
authors = ["eraflo"]
description = "Interactive README runner and onboarding guide"
publish = false

[dependencies]
# Ultra-fast Markdown parser
pulldown-cmark = "0.10"
# Terminal interface (TUI)
ratatui = "0.29"
crossterm = { version = "0.27", features = ["events"] }
# CLI arguments management
clap = { version = "4.4", features = ["derive"] }
# Error management
anyhow = "1.0"
# Command execution with PTY (later)
portable-pty = "0.8"
# Syntax highlighting for code
syntect = "5.1"
regex = "1.12.2"
which = "7.0"
# Serialization for config and export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# User directories for persistent configuration
directories = "5.0"
# Date/time for reports
chrono = "0.4"
# Template engine for reports
minijinja = { version = "1.0", features = ["debug"] }
ansi-to-tui = "7.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
# Network requests
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
url = "2.5"
sysinfo = "0.38.0"
pathdiff = "0.2.3"
