[package]
name = "compass"
version = "2.0.1"
edition = "2024"
authors = ["eraflo"]
description = "Interactive README runner and onboarding guide"
license = "Apache-2.0"
repository = "https://github.com/eraflo/Compass"
readme = "README.md"
# publish = true

[dependencies]
# Ultra-fast Markdown parser
pulldown-cmark = "0.10"
# Terminal interface (TUI)
ratatui = "0.29"
crossterm = { version = "0.27", features = ["events"] }
# CLI arguments management
clap = { version = "4.4", features = ["derive"] }
# Error management
anyhow = "1.0"
# Command execution with PTY (later)
portable-pty = "0.8"
# Syntax highlighting for code
syntect = "5.1"
regex = "1.12.2"
which = "7.0"
# Serialization for config and export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# User directories for persistent configuration
directories = "5.0"
# Date/time for reports
chrono = "0.4"
# Template engine for reports
minijinja = { version = "1.0", features = ["debug"] }
ansi-to-tui = "7.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
# Network requests
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
url = "2.5"
sysinfo = "0.38.0"
pathdiff = "0.2.3"
tokio = { version = "1.49.0", features = ["full"] }
# Rustls for granular control over verification
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
# Security & Crypto
rcgen = "0.12"      # Certificate generation
rustls = { version = "0.23", features = ["ring"] } # TLS Library
tokio-rustls = "0.26" # Async TLS wrapper
sha2 = "0.10"       # Hashing for fingerprinting
hex = "0.4"
base64 = "0.21"
local-ip-address = "0.6.10"
serde_yaml = "0.9.34"
